Got ReCAPTCHA working.

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,19 @@
-<div class="comment-box">
-	<div contentEditable="true" id="name-entry" class="comment-entry">Anonymous</div>
-	<div contentEditable="true" id="comment-entry" class="comment-entry"></div>
-	<div class="comment-button">Comment</div>
-</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="css/comments.css">
+		<script src='js/comments.js'></script>
+		<script src='https://www.google.com/recaptcha/api.js'></script>
+	</head>
+	<body>
+		<div class="comment-box">
+			<div contentEditable="true" id="name-entry" class="comment-entry">Anonymous</div>
+			<div contentEditable="true" id="comment-entry" class="comment-entry"></div>
+			<div class="g-recaptcha" data-sitekey="<YOUR SITEKEY>"></div>
+			<div class="comment-button">Comment</div>
+		</div>
 
-<div class="comment-listing">
-</div>
+		<div class="comment-listing">
+		</div>
+	</body>
+</html>
